--- a/src/components/maps/Maps.css
+++ b/src/components/maps/Maps.css
@@ -1,4 +1,6 @@
-.map-container {
-    height: 80%;
-    width: 60%;
+.maps-container {
+    height: 100vh;
+    width: 80vw;
+    /* display: flex;
+    justify-content: center; */
 }
