--- a/src/components/maps/Maps.css
+++ b/src/components/maps/Maps.css
@@ -1,6 +1,7 @@
 .maps-container {
     height: 100vh;
-    width: 80vw;
-    /* display: flex;
-    justify-content: center; */
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
